fixing the spacing of the list items in the navbar for all break points

--- a/src/app/components/NavBar/NavBar.scss
+++ b/src/app/components/NavBar/NavBar.scss
@@ -56,26 +56,32 @@
         justify-content: center;
         align-items: center;
     }
-
     &__list {
         display: flex;
-        gap: 0.5rem; 
+        text-decoration: none;
+        text-align: center;
+        justify-content: space-around;
+        gap: 20px;
+        list-style: none;
+        @include text-base;
+    }
+    &__list-item{
+        display: flex;
+        justify-content: space-around;
         text-decoration: none;
         text-align: center;
         list-style: none;
         @include text-base;
-        margin-left: 110px;
     }
 
-    &__list-item {
-        text-decoration: none;
-        color: $theme-color;
-        padding: 0.625rem;
+    &__link-item {
+        text-decoration: none !important;
+        color: $theme-color !important;
         transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
         @include text-base;
 
         &:hover {
-            color: $accent-color;
+            color: $dark-brown;
             transform: scale(1.1); 
         }
 
@@ -125,6 +131,9 @@
             width: 100%;
             gap: 2rem; 
         }
+        &__list {
+            gap: 50px;
+        }
         &__button {
             visibility: visible;
             padding: 0.5rem 1rem;
@@ -136,7 +145,7 @@
             transition: background-color 0.3s ease-in-out;
     
             &:hover {
-                background-color: $accent-color;
+                background-color: $dark-brown;
             }
     
             &:focus {
@@ -163,9 +172,12 @@
             width: 100%;
             gap: 2rem; 
         }
+        &__list {
+            gap: 100px;
+        }
         &__button {
             visibility: visible;
-            padding: 0.5rem 1rem;
+            // padding: 0.5rem 1rem;
             background-color: $theme-color;
             color: #fff;
             border: none;
@@ -174,7 +186,7 @@
             transition: background-color 0.3s ease-in-out;
     
             &:hover {
-                background-color: $accent-color;
+                background-color: $dark-brown;
             }
     
             &:focus {
